--- a/rhonda.html
+++ b/rhonda.html
@@ -18,111 +18,7 @@
 </head>
 
 <body data-smooth-scroll-offset="77">
-  <!-- <div class="nav-container">
-    <div class="via-1520372906696" via="via-1520372906696" vio="Solutions">
-      <div class="bar bar--sm visible-xs">
-        <div class="container">
-          <div class="row">
-            <div class="col-xs-3 col-sm-2">
-              <a href="index.html"> <img class="logo logo-dark" alt="logo" src="img/logo-dark.png"> <img class="logo logo-light" alt="logo" src="img/logo-light.png"> </a>
-            </div>
-            <div class="col-xs-9 col-sm-10 text-right">
-              <a href="#" class="hamburger-toggle" data-toggle-class="#menu1;hidden-xs hidden-sm"> <i class="icon icon--sm stack-interface stack-menu"></i> </a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <nav id="menu1" class="bar bar-1 hidden-xs">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-1 col-sm-2 hidden-xs">
-              <div class="bar__module">
-                <a href="index.html"> <img class="logo logo-dark" alt="imi powered by our Artificial Intelligence Rhonda" src="img/imi-good-jobs-logo.png"> <img class="logo logo-light" alt="logo" src="img/logo-light.png"> </a>
-              </div>
-            </div>
-            <div class="col-md-11 col-sm-12 text-right text-left-xs text-left-sm">
-              <div class="bar__module">
-                <ul class="menu-horizontal text-left">
-                  <li> <a href="#">Good Jobs</a> </li>
-                  <li class="dropdown">
-                    <div class="dropdown__container">
-                      <div class="container">
-                        <div class="row">
-                          <div class="dropdown__content col-md-2">
-                            <ul class="menu-vertical">
-                              <li> <a href="#">Automation</a> </li>
-                            </ul>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </li>
-                  <li class="dropdown"> <span class="dropdown__trigger">
-                                        Solutions&nbsp;&nbsp;</span>
-                    <div class="dropdown__container">
-                      <div class="container">
-                        <div class="row">
-                          <div class="dropdown__content col-md-2">
-                            <ul class="menu-vertical">
-                              <li> <a href="#">Automation<br></a> </li>
-                              <li> <a href="#">Material Handling<br></a> </li>
-                              <li> <a href="#">Executive Search<br></a> </li>
-                              <li> <a href="#">Rhonda<br></a> </li>
-                            </ul>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </li>
-                  <li>
-                    <a href="#"> </a>
-                  </li>
-                  <li class="dropdown">
-                    <div class="dropdown__container">
-                      <div class="container">
-                        <div class="row">
-                          <div class="dropdown__content col-md-12">
-                            <div class="col-md-3">
-                              <h5>Menu Title</h5>
-                              <ul class="menu-vertical">
-                                <li> <a href="#">Single Link</a> </li>
-                              </ul>
-                            </div>
-                            <div class="col-md-3">
-                              <h5>Menu Title</h5>
-                              <ul class="menu-vertical">
-                                <li> <a href="#">Single Link</a> </li>
-                              </ul>
-                            </div>
-                            <div class="col-md-3">
-                              <h5>Menu Title</h5>
-                              <ul class="menu-vertical">
-                                <li> <a href="#">Single Link</a> </li>
-                              </ul>
-                            </div>
-                            <div class="col-md-3">
-                              <h5>Menu Title</h5>
-                              <ul class="menu-vertical">
-                                <li> <a href="#">Single Link</a> </li>
-                              </ul>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </li>
-                </ul>
-              </div>
-              <div class="bar__module">
-                <a class="btn btn--sm type--uppercase btn--primary" href="#purchase-template"> <span class="btn__text">
-                                    Contact</span> </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </nav>
-    </div>
-  </div> -->
+
 
   <div class="nav-container">
     <div class="via-1520372906696" via="via-1520372906696" vio="Solutions">
@@ -257,7 +153,7 @@
       </div>
     </section>
     <a id="operate-title" class="in-page-link"></a>
-    <section class="text-center">
+    <section style="padding-bottom:52px" class="text-center">
       <div class="container">
         <div class="row">
           <div class="col-sm-10 col-md-8">
@@ -315,7 +211,7 @@
         </div>
       </div>
     </section>
-    <section class="text-center">
+    <section style="padding-top:30px" class="text-center">
       <div class="container">
         <div class="row">
           <div class="col-sm-8 col-md-6">
@@ -418,7 +314,7 @@
       </div>
     </section>
     <a id="working-with-title" class="in-page-link"></a>
-    <section class="text-center">
+    <section style="padding-bottom:0" class="text-center">
       <div class="container">
         <div class="row">
           <div class="col-sm-10 col-md-8">
